--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Quiz Blocks</title>
 
-	<script type="text/javascript" src="js/phaser/build/phaser.min.js"></script>
+	<script type="text/javascript" src="js/phaser.min.js"></script>
 	<script type="text/javascript" src="js/quiz-blocks.js"></script>
 </head>
 <body>
