updating readme & index, removing debug options

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
 <h1>Quiz Blocks</h1>
+<div><a href="https://github.com/kidsil/quiz-tower" target="_blank">More Info</a></div>
 </body>
 </html>
